--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
+        let counter = 0;
         const socket = io({
             auth: {
                 serverOffset: 0
-            }
+            },
+            ackTimeout: 10000,
+            retries: 3
         })
         const form = document.getElementById('form')
         const input = document.getElementById('input')
@@ -36,7 +39,8 @@
         form.addEventListener('submit', e => {
             e.preventDefault()
             if (input.value) {
-                socket.emit('chat message', input.value)
+                const clientOffset = `${socket.id}-${counter++}`
+                socket.emit('chat message', input.value, clientOffset)
                 input.value = ''
             }
         })
